Improve kernels refactorings in Filters